.. currentmodule:: netaddr

--------------------
NEXT_NETADDR_VERSION
--------------------

Date: YYYY-MM-DD

Added:

* Add an :data:`INET_ATON` flag to explicitly request ``inet_aton()`` IPv4 parsing semantics
  from :class:`IPAddress`.
* Add an :meth:`IPAddress.is_ipv4_private_use` convenience method.

Fixed:

* Improve Python 3.13 compatibility, thank you John Eckersberg.

Deprecated:

* Deprecate Python 3.7 support.
* Deprecate abbreviated CIDR format support in :class:`IPNetwork`
  (``implicit_prefix=True``).
* Deprecate accepting leading zeros when parsing IPv4 addresses in :data:`INET_PTON` mode
  (it's been allowed on some platforms).

  If you need to allow and discard leading zeros use the :data:`ZEROFILL` flag.

  This change will implicit conversions from ``str`` in all relevant contexts. If you need
  to control the IPv4 parsing mode construct :class:`IPAddress` objects explicitly.
* Deprecate parsing IPv4 addresses permissively (``inet_aton()``-like) by default.

  :data:`INET_PTON` will become the default mode.

  If you need to be permissive and parse using ``inet_aton()`` semantics use the
  :data:`INET_ATON` flag.

  This change will implicit conversions from ``str`` in all relevant contexts. If you need
  to control the IPv4 parsing mode construct :class:`IPAddress` objects explicitly.

Other:

* Raise an exception if invalid flags are passed to ``IPAddress``, ``IPNetwork`` or ``IPRange``.
* Improve the documentation substantially.
* Update the DB files to the latest versions (2023-12-23).

--------------
Release: 0.9.0
--------------

Date: 2023-09-18

Added:

* Add hash capabilities to OUI (#225, amitmi704)

Fixed:

* **Backwards incompatible:** Handle RFC 6164 IPv6 addresses (don't reserve first IP
  address in point-to-point subnets) ($267, Damien Claisse)
* **Technically backwards incompatible:** Fix for is_loopback behaviour – consider
  ``IPNetwork('::1/128')`` to be loopback (#222, #223, niels)