@@ -13,6 +13,7 @@ ipv4_mapped = 1 << 6
 hostmask = 1 << 7
 netmask = 1 << 8
 ipv4_private_use = 1 << 9
+global_ = 1 << 10
 
 flags = {
     'unicast': unicast,
@@ -25,6 +26,7 @@ flags = {
     'hostmask': hostmask,
     'netmask': netmask,
     'ipv4_private_use': ipv4_private_use,
+    'global': global_,
 }
 
 
@@ -34,7 +36,7 @@ flags = {
     ['0.0.1.255', hostmask | reserved | unicast | hostmask],
     ['0.255.255.255', reserved | hostmask | unicast],
     ['10.0.0.1', ipv4_private_use | private | unicast],
-    ['62.125.24.5', unicast],
+    ['62.125.24.5', global_ | unicast],
     ['100.64.0.0', private | unicast],
     ['127.0.0.0', reserved | loopback | unicast | reserved],
     ['127.0.0.1', loopback | reserved | unicast],
@@ -43,27 +45,27 @@ flags = {
     ['169.254.0.0', link_local | private | unicast],
     ['192.0.0.0', netmask | private | unicast],
     ['192.0.0.8', private | unicast],
-    ['192.0.0.9', private | unicast],
-    ['192.0.0.10', private | unicast],
+    ['192.0.0.9', global_ | private | unicast],
+    ['192.0.0.10', global_ | private | unicast],
     ['192.0.0.11', private | unicast],
     ['192.0.0.170', private | unicast],
     ['192.0.0.171', private | unicast],
     ['192.0.2.0', reserved | unicast],
     ['192.0.2.1', reserved | unicast],
     ['192.0.2.255', reserved | unicast],
-    ['192.31.196.0', unicast],
-    ['192.52.193.0', unicast],
-    ['192.88.99.0', reserved | unicast],
-    ['192.88.99.255', reserved | unicast],
+    ['192.31.196.0', global_ | unicast],
+    ['192.52.193.0', global_ | unicast],
+    ['192.88.99.0', global_ | reserved | unicast],
+    ['192.88.99.255', global_ | reserved | unicast],
     ['192.168.0.1', ipv4_private_use | private | unicast],
-    ['192.175.48.0', unicast],
+    ['192.175.48.0', global_ | unicast],
     ['198.18.0.0', private | unicast],
     ['198.19.255.255', private | unicast],
     ['198.51.100.0', reserved | unicast],
     ['203.0.113.0', reserved | unicast],
-    ['233.252.0.0', reserved | multicast],
-    ['233.252.0.255', reserved | multicast],
-    ['239.192.0.1', private | multicast],
+    ['233.252.0.0', global_ | reserved | multicast],
+    ['233.252.0.255', global_ | reserved | multicast],
+    ['239.192.0.1', global_ | private | multicast],
     ['253.0.0.1', reserved | unicast],
     ['255.255.254.0', netmask | reserved | unicast],
     # IPv6
@@ -71,24 +73,24 @@ flags = {
     ['::1', loopback | hostmask | reserved | unicast],
     ['::ffff:0.0.0.0', ipv4_mapped | reserved | unicast],
     ['::ffff:1.1.1.1', ipv4_mapped | reserved | unicast],
-    ['64:ff9b::', reserved | unicast],
+    ['64:ff9b::', global_ | reserved | unicast],
     ['64:ff9b:1::', reserved | unicast],
     ['100::', reserved | unicast],
     ['2001::', unicast],
-    ['2001:1::1', unicast],
-    ['2001:1::2', unicast],
+    ['2001:1::1', global_ | unicast],
+    ['2001:1::2', global_ | unicast],
     ['2001:2::', unicast],
-    ['2001:3::', unicast],
-    ['2001:4:112::', unicast],
+    ['2001:3::', global_ | unicast],
+    ['2001:4:112::', global_ | unicast],
     ['2001:10::', unicast],
-    ['2001:20::', unicast],
-    ['2001:30::', unicast],
+    ['2001:20::', global_ | unicast],
+    ['2001:30::', global_ | unicast],
     ['2001:db8::', unicast],
     ['2002::', unicast],
-    ['2620:4f:8000::', unicast],
+    ['2620:4f:8000::', global_ | unicast],
     ['fc00::1', private | unicast],
     ['fe80::1', private | unicast | link_local],
-    ['ff00::1', reserved | multicast],
+    ['ff00::1', global_ | reserved | multicast],
 ])
 def test_ip_categories(text_address, categories):
     address = IPAddress(text_address)
