@@ -11,6 +11,8 @@ Added:
 * Add an :data:`INET_ATON` flag to explicitly request ``inet_aton()`` IPv4 parsing semantics
   from :class:`IPAddress`.
 * Add an :meth:`IPAddress.is_ipv4_private_use` convenience method.
+* Add an :meth:`IPAddress.is_global` convenience method to allow determining if an address is
+  considered globally reachable.
 
 Fixed:
 
